src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__command_suggestions.snap
---
source: src/cli/renderer/live.rs
assertion_line: 1041
expression: frame.render_styled()
---
│   no matching commands                                                            # [bg=#212337]=   [fg=#3b4261 bg=#212337]=no matching commands [bg=#212337]=                                                         [bg=#212337]=
