src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__file_picker_long_path.snap
---
source: src/cli/renderer/live.rs
assertion_line: 966
expression: frame.render_styled()
---
│   files  type to filter         # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=files [bg=#212337]=   [fg=#3b4261 bg=#212337]=type to filter [bg=#212337]=      [bg=#212337]=  
│   ›  src/very/deeply/nested/…   # [bg=#292e42]=   [fg=#e0e0e0 bg=#292e42 b]=› [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=src/very/deeply/nested/… [bg=#292e42]= 
│   Enter select   Esc close      # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Enter [fg=#3b4261 bg=#212337]= select    [fg=#37f499 bg=#212337 b]=Esc [fg=#3b4261 bg=#212337]= close [bg=#212337]=   [bg=#212337]=
