src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__file_picker_no_matches.snap
---
source: src/cli/renderer/live.rs
assertion_line: 958
expression: frame.render_styled()
---
│   files  xyz                                                                      # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=files [bg=#212337]=   [fg=#3b4261 bg=#212337]=xyz [bg=#212337]=                                                                   [bg=#212337]=  
│   no matches                                                                      # [bg=#212337]=   [fg=#3b4261 bg=#212337]=no matches [bg=#212337]=                                                                   [bg=#212337]=  
│   Enter select   Esc close                                                        # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Enter [fg=#3b4261 bg=#212337]= select    [fg=#37f499 bg=#212337 b]=Esc [fg=#3b4261 bg=#212337]= close [bg=#212337]=                                                     [bg=#212337]=
