src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__help_rows.snap
---
source: src/cli/renderer/live.rs
assertion_line: 1016
expression: frame.render_styled()
---
│   ── Navigation ──                                                                # [bg=#212337]=   [fg=#6473b7 bg=#212337 b]=── Navigation ── [bg=#212337]=                                                             [bg=#212337]=  
│   Up/Down         move cursor or recall history                                   # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Up/Down          [fg=#abb4da bg=#212337]=move cursor or recall history [bg=#212337]=                                [bg=#212337]=  
│   Enter           accept highlighted item                                         # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Enter            [fg=#abb4da bg=#212337]=accept highlighted item [bg=#212337]=                                      [bg=#212337]=  
│   Escape          close help, files, or commands                                  # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Escape           [fg=#abb4da bg=#212337]=close help, files, or commands [bg=#212337]=                               [bg=#212337]=  
│   ── Editing ──                                                                   # [bg=#212337]=   [fg=#6473b7 bg=#212337 b]=── Editing ── [bg=#212337]=                                                                [bg=#212337]=  
│   Shift+Enter     insert newline                                                  # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Shift+Enter      [fg=#abb4da bg=#212337]=insert newline [bg=#212337]=                                               [bg=#212337]=  
│   Ctrl+A/E        move to start/end                                               # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+A/E         [fg=#abb4da bg=#212337]=move to start/end [bg=#212337]=                                            [bg=#212337]=  
│   Ctrl+B/F        move cursor left/right                                          # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+B/F         [fg=#abb4da bg=#212337]=move cursor left/right [bg=#212337]=                                       [bg=#212337]=  
│   Ctrl+W          delete previous word                                            # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+W           [fg=#abb4da bg=#212337]=delete previous word [bg=#212337]=                                         [bg=#212337]=  
│   Ctrl+K          delete to end of line                                           # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+K           [fg=#abb4da bg=#212337]=delete to end of line [bg=#212337]=                                        [bg=#212337]=  
│   Ctrl+U          delete to start of line                                         # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+U           [fg=#abb4da bg=#212337]=delete to start of line [bg=#212337]=                                      [bg=#212337]=  
│   Ctrl+Y          yank (paste) last kill                                          # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+Y           [fg=#abb4da bg=#212337]=yank (paste) last kill [bg=#212337]=                                       [bg=#212337]=  
│   Ctrl+T          transpose characters                                            # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Ctrl+T           [fg=#abb4da bg=#212337]=transpose characters [bg=#212337]=                                         [bg=#212337]=  
│   Alt+B/F         move word left/right                                            # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Alt+B/F          [fg=#abb4da bg=#212337]=move word left/right [bg=#212337]=                                         [bg=#212337]=  
│   Alt+D           delete next word                                                # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Alt+D            [fg=#abb4da bg=#212337]=delete next word [bg=#212337]=                                             [bg=#212337]=  
│   Alt+Bksp        delete previous word                                            # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Alt+Bksp         [fg=#abb4da bg=#212337]=delete previous word [bg=#212337]=                                         [bg=#212337]=
