src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__mention_styling.snap
---
source: src/cli/renderer/live.rs
assertion_line: 1007
expression: frame.render_styled()
---
│    ›  check @src/main.rs for details                                              # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=check  [fg=#37f499 bg=#212337 b]=@src/main.rs [fg=#ebfafa bg=#212337]= for details [bg=#212337]=                                           [bg=#212337]=
